add build and hardware module
